--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="bower_components/ionicons/css/ionicons.min.css">
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/infinite-slider.css">
     <link rel="icon" href="assets/images/suvc.png" type="image/gif" sizes="16x16">
 </head>
 
@@ -44,19 +45,19 @@
                 <ul class="nav navbar-nav navbar-right">
 
                     <!-- navigation menu -->
-                    <li class="active"><a data-scroll href="#about">About</a></li>
-                    <li><a data-scroll href="#speakers">Guests</a></li>
-                    <li><a data-scroll href="#photos">Photos</a></li>
-                    <li><a data-scroll href="#partner">Partner</a></li>
+                    <li class="active"><a data-scroll href="#home">HOME</a></li>
+                    <li><a data-scroll href="#speakers">SUVC</a></li>
+                    <li><a data-scroll href="#photos">WORKSHOP</a></li>
+                    <li><a data-scroll href="#about">ABOUT US</a></li>
                     <!-- <li><a data-scroll href="#">Sponsorship</a></li> -->
-                    <li><a data-scroll href="#faq">FAQ</a></li>
-                    <li><a data-scroll href="#location">Contact Us</a></li>
+                    <li><a data-scroll href="#faq">CONTACT US</a></li>
+                    <!--<li><a data-scroll href="#location">REGISTER</a></li>-->
+                    <li><a href="https://sites.google.com/view/suvc2020/home" target="_blank">REGISTER</a></li>
                     <li>
                         <a href="assets/content/rulebook_2020.pdf" target="_blank">Rule Book
                             <i class="ion-android-download"></i>
                         </a>
                     </li>
-                    <li><a href="https://sites.google.com/view/suvc2020/home" target="_blank">Register Now</a></li>
                     <li>
                         <a href="https://drive.google.com/open?id=1NG_pI9TBDtiU0qfAt4t343HIncS2C6Gk" target="_blank">
                             Download App
@@ -74,13 +75,67 @@
             <!--<h2>Date:4 Mar - 9 Mar 2020</h2> -->
             <h2>SUVC - 2021</h2>
             <h1>SAUR URJA VEHICLE CHALLENGE</h1>
-
+            <h2><i>ACCELERATING THE FUTURE</i></h2>
             <!--<p>VENUE &colon; HINDUSTHAN COLLEGE OF ENGINEERING AND TECHNOLOGY, Coimbatore, Tamil Nadu</p>-->
             <p>Season 4</p>
             <a class="btn btn-white" href="https://sites.google.com/view/suvc2020/home" target="_blank">Register Now</a>
 
         </div>
     </header>
+
+    <section id="home" class="section home">
+      <div class="container">
+
+        <div class="row">
+          <div class="col-sm-12">
+            <div id="slider" class="carousel slide" data-ride="carousel" data-interval="2500">
+              <!-- Indicators -->
+              <ol class="carousel-indicators">
+                <li data-target="#slider" data-slide-to="0" class="active"></li>
+                <li data-target="#slider" data-slide-to="1"></li>
+                <li data-target="#slider" data-slide-to="2"></li>
+                <li data-target="#slider" data-slide-to="3"></li>
+                <li data-target="#slider" data-slide-to="4"></li>
+              </ol>
+              <!-- Wrapper for slides -->
+              <div class="carousel-inner">
+                <div class="item active">
+                  <img src="assets/images/slider/slider_1.jpg" alt="Image">
+                </div>
+                <div class="item">
+                  <img src="assets/images/slider/slider_2.jpg" alt="Image">
+                </div>
+                <div class="item">
+                  <img src="assets/images/slider/slider_3.jpg" alt="Image">
+                </div>
+                <div class="item">
+                  <img src="assets/images/slider/slider_4.jpg" alt="Image">
+                </div>
+                <div class="item">
+                  <img src="assets/images/slider/slider_5.jpg" alt="Image">
+                </div>
+              </div>
+              <!-- Left and right controls -->
+              <a class="left carousel-control" href="#slider" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="right carousel-control" href="#slider" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div> <!-- caraosel -->
+
+          </div> <!--col -->
+        </div> <!-- first row -->
+
+        <div class="row">
+          <div class="col-md-12">
+          </div>
+        </div> <!-- 2nd row -->
+
+      </div>
+    </section>
 
     <section id="about" class="section about">
         <div class="container">
@@ -138,30 +193,31 @@
     </section>
 
     <section id="facts" class="section bg-image-1 facts text-center">
+
         <div class="container">
             <div class="row">
                 <div class="col-sm-3">
 
                     <i class="ion-ios-people"></i>
-                    <h3>1500<br>Students</h3>
 
+                    <h3><span class="counter">1500</span><br>Students</h3>
                 </div>
                 <div class="col-sm-3">
 
                     <i class="ion-university"></i>
-                    <h3>40<br>Colleges</h3>
+                    <h3><span class="counter">40</span><br>Colleges</h3>
 
                 </div>
                 <div class="col-sm-3">
 
                     <i class="ion-ios-location"></i>
-                    <h3>11 <br>States</h3>
+                    <h3><span class="counter">11</span> <br>States</h3>
 
                 </div>
                 <div class="col-sm-3">
 
                     <i class="ion-podium"></i>
-                    <h3>10<br>Companies</h3>
+                    <h3><span class="counter">10</span><br>Companies</h3>
 
                 </div>
             </div><!-- row -->
@@ -366,7 +422,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h3 class="section-title">Accredited By</h3>
+                    <h2 class="section-title" style="text-align:center">SUPPORTED BY</h2>
                 </div>
             </div>
             <div class="row">
@@ -379,11 +435,33 @@
                 <div class="col-sm-4">
                     <a class="partner-box partner-box-3"></a>
                 </div>
+
+                <!-- below code belongs to "Event Partner" section but merged with "SUPPORTED-BY" -->
+                <div class="row">
+                    <div class="col-sm-4">
+                        <a class="partner-box partner-box-5"></a>
+                    </div>
+                    <div class="col-sm-4">
+                        <a class="partner-box partner-box-6"></a>
+                    </div>
+                    <div class="col-sm-4">
+                        <a class="partner-box partner-box-4"></a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-4">
+                        <a class="partner-box partner-box-8"></a>
+                    </div>
+                    <div class="col-sm-4">
+                        <a class="partner-box partner-box-7"></a>
+                    </div>
+                </div>
                 <!-- <div class="col-sm-3">
                     <a class="partner-box partner-box-4"></a>
                 </div> -->
             </div>
     </section>
+    <!--
     <section id="partner" class="section partner">
         <div class="container">
             <div class="row">
@@ -408,7 +486,7 @@
                     <a class="partner-box partner-box-7"></a>
                 </div>
             </div>
-    </section>
+    </section> -->
     <section id="partner" class="section partner">
         <div class="container">
             <div class="row">
@@ -416,6 +494,34 @@
                     <h3 class="section-title">Our Clients</h3>
                 </div>
             </div>
+            <div class="row">
+              <div class="col-md-12">
+                  <section class="customer-logos slider">
+                    <div class="slide"><img src="assets/images/clients/aps_eng_clg.png"></div>
+                    <div class="slide"><img src="assets/images/clients/apsit_mumbai.jpg"></div>
+                    <div class="slide"><img src="assets/images/clients/deogiri.png"></div>
+                    <div class="slide"><img src="assets/images/clients/dit.png"></div>
+                    <div class="slide"><img src="assets/images/clients/gsbt.png"></div>
+                    <div class="slide"><img src="assets/images/clients/hicet.jpg"></div>
+                    <div class="slide"><img src="assets/images/clients/hindusthan.png"></div>
+                    <div class="slide"><img src="assets/images/clients/jaglion.png"></div>
+                    <div class="slide"><img src="assets/images/clients/kramakrishna.png"></div>
+                    <div class="slide"><img src="assets/images/clients/krce.png"></div>
+                    <div class="slide"><img src="assets/images/clients/manit8.png"></div>
+                    <div class="slide"><img src="assets/images/clients/mitadt.png"></div>
+                    <div class="slide"><img src="assets/images/clients/nitrourkela.png"></div>
+                    <div class="slide"><img src="assets/images/clients/presidency.png"></div>
+                    <div class="slide"><img src="assets/images/clients/ramco.png"></div>
+                    <div class="slide"><img src="assets/images/clients/rjit.png"></div>
+                    <div class="slide"><img src="assets/images/clients/saranathan.png"></div>
+                    <div class="slide"><img src="assets/images/clients/sbjain.png"></div>
+                    <div class="slide"><img src="assets/images/clients/skce.png"></div>
+                    <div class="slide"><img src="assets/images/clients/srisairam.png"></div>
+                    <div class="slide"><img src="assets/images/clients/srmist.jpg"></div>
+                  </section>
+              </div>
+            </div> <!-- content row -->
+            <!--
             <div class="row">
                 <div class="col-sm-2">
                     <a class="partner-box partner-box-9"></a>
@@ -435,7 +541,7 @@
                 <div class="col-sm-2">
                     <a class="partner-box partner-box-14"></a>
                 </div>
-            </div>
+            </div> -->
             <div class="row">
             </div>
         </div>
@@ -655,7 +761,7 @@
                 <div class="row">
                     <div class="col-sm-12 text-center">
                         <h2>Want to join us?</h2>
-                     
+
                             <div class="mt20">
                                 <button type="submit" class="btn btn-black"
                                     onclick="window.open('https://sites.google.com/view/suvc2020/home')"
@@ -663,7 +769,7 @@
                             </div>
                             <!-- <a class="btn btn-white" href="https://sites.google.com/view/suvc2020/home"
                                 target="_blank">Register Now</a> -->
-                       
+
                     </div>
                 </div>
             </div>
@@ -769,7 +875,20 @@
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="bower_components/smooth-scroll/dist/js/smooth-scroll.min.js"></script>
+    <script src="bower_components/waypoints/lib/jquery.waypoints.min.js"></script>
+    <script src="assets/js/jquery.counterup.min.js"></script>
+    <script src="assets/js/slick.js"></script>
     <script src="assets/js/main.js"></script>
+    <script>
+      jQuery(document).ready(function($) {
+          $('.counter').counterUp({
+              delay: 10,
+              time: 1000
+          });
+      });
+    </script>
+    <script src="assets/js/carousel.js"></script>
+
 </body>
 
 </html>
