--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 
     <!-- css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/bootstrapCarouselBackground.css">
     <link rel="stylesheet" href="bower_components/ionicons/css/ionicons.min.css">
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/infinite-slider.css">
@@ -17,7 +18,7 @@
 </head>
 
 <body data-spy="scroll" data-target="#site-nav">
-    <nav id="site-nav" class="navbar navbar-fixed-top navbar-custom">
+    <nav id="site-nav" class="navbar navbar-fixed-top navbar-custom navbar-solid">
         <div class="container">
             <div class="navbar-header">
 
@@ -46,7 +47,7 @@
 
                     <!-- navigation menu -->
                     <li class="active"><a data-scroll href="#home">HOME</a></li>
-                    <li><a data-scroll href="#speakers">SUVC</a></li>
+                    <li><a data-scroll href="#speakers">RSTE</a></li>
                     <li><a data-scroll href="#photos">WORKSHOP</a></li>
                     <li><a data-scroll href="#about">ABOUT US</a></li>
                     <!-- <li><a data-scroll href="#">Sponsorship</a></li> -->
@@ -71,71 +72,55 @@
 
     <header id="site-header" class="site-header valign-center">
         <div class="intro">
+          <div id="slider" class="carousel slide" data-ride="carousel" data-interval="2500">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+              <li data-target="#slider" data-slide-to="0" class="active"></li>
+              <li data-target="#slider" data-slide-to="1"></li>
+              <li data-target="#slider" data-slide-to="2"></li>
+              <li data-target="#slider" data-slide-to="3"></li>
+              <li data-target="#slider" data-slide-to="4"></li>
+            </ol>
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner">
+              <div class="item active">
+                <img src="assets/images/slider/slider_1.jpg" alt="Image">
+              </div>
+              <div class="item">
+                <img src="assets/images/slider/slider_2.jpg" alt="Image">
+              </div>
+              <div class="item">
+                <img src="assets/images/slider/slider_3.jpg" alt="Image">
+              </div>
+              <div class="item">
+                <img src="assets/images/slider/slider_4.jpg" alt="Image">
+              </div>
+              <div class="item">
+                <img src="assets/images/slider/slider_5.jpg" alt="Image">
+              </div>
+            </div>
+            <!-- Left and right controls
+            <a class="left carousel-control" href="#slider" data-slide="prev">
+              <span class="glyphicon glyphicon-chevron-left"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#slider" data-slide="next">
+              <span class="glyphicon glyphicon-chevron-right"></span>
+              <span class="sr-only">Next</span>
+            </a> -->
+          </div>
 
             <!--<h2>Date:4 Mar - 9 Mar 2020</h2> -->
+          <div id="intro_heading_box">
             <h2>SUVC - 2021</h2>
             <h1>SAUR URJA VEHICLE CHALLENGE</h1>
             <h2><i>ACCELERATING THE FUTURE</i></h2>
             <!--<p>VENUE &colon; HINDUSTHAN COLLEGE OF ENGINEERING AND TECHNOLOGY, Coimbatore, Tamil Nadu</p>-->
             <p>Season 4</p>
             <a class="btn btn-white" href="https://sites.google.com/view/suvc2020/home" target="_blank">Register Now</a>
-
+          </div>
         </div>
     </header>
-
-    <section id="home" class="section home">
-      <div class="container">
-
-        <div class="row">
-          <div class="col-sm-12">
-            <div id="slider" class="carousel slide" data-ride="carousel" data-interval="2500">
-              <!-- Indicators -->
-              <ol class="carousel-indicators">
-                <li data-target="#slider" data-slide-to="0" class="active"></li>
-                <li data-target="#slider" data-slide-to="1"></li>
-                <li data-target="#slider" data-slide-to="2"></li>
-                <li data-target="#slider" data-slide-to="3"></li>
-                <li data-target="#slider" data-slide-to="4"></li>
-              </ol>
-              <!-- Wrapper for slides -->
-              <div class="carousel-inner">
-                <div class="item active">
-                  <img src="assets/images/slider/slider_1.jpg" alt="Image">
-                </div>
-                <div class="item">
-                  <img src="assets/images/slider/slider_2.jpg" alt="Image">
-                </div>
-                <div class="item">
-                  <img src="assets/images/slider/slider_3.jpg" alt="Image">
-                </div>
-                <div class="item">
-                  <img src="assets/images/slider/slider_4.jpg" alt="Image">
-                </div>
-                <div class="item">
-                  <img src="assets/images/slider/slider_5.jpg" alt="Image">
-                </div>
-              </div>
-              <!-- Left and right controls -->
-              <a class="left carousel-control" href="#slider" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="right carousel-control" href="#slider" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right"></span>
-                <span class="sr-only">Next</span>
-              </a>
-            </div> <!-- caraosel -->
-
-          </div> <!--col -->
-        </div> <!-- first row -->
-
-        <div class="row">
-          <div class="col-md-12">
-          </div>
-        </div> <!-- 2nd row -->
-
-      </div>
-    </section>
 
     <section id="about" class="section about">
         <div class="container">
@@ -159,7 +144,7 @@
                         Creative Product Exhibition, Motorsport Events or any such event.</p>
 
                     <figure>
-                        <img alt="" class="img-responsive" src="assets/images/backgrounds/4.JPG">
+                        <img alt="" class="img-responsive" src="assets/images/backgrounds/about_us.JPG">
                     </figure>
 
                 </div><!-- /.col-sm-6 -->
