--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="utf-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>SUVC</title>
 
@@ -82,11 +82,11 @@
                 <li data-target="#slider" data-slide-to="4"></li>
               </ol>
               <div class="carousel-inner">
-                <div class="item active"><img src="assets/images/slider/slider_1.jpg" alt="Image"></div>
-                <div class="item"><img src="assets/images/slider/slider_2.jpg" alt="Image"></div>
-                <div class="item"><img src="assets/images/slider/slider_3.jpg" alt="Image"></div>
-                <div class="item"><img src="assets/images/slider/slider_4.jpg" alt="Image"></div>
-                <div class="item"><img src="assets/images/slider/slider_5.jpg" alt="Image"></div>
+                <div class="item active" style="background-image:url('assets/images/slider/slider_1.jpg')"></div>
+                <div class="item" style="background-image:url('assets/images/slider/slider_2.jpg')"></div>
+                <div class="item" style="background-image:url('assets/images/slider/slider_3.jpg')"></div>
+                <div class="item" style="background-image:url('assets/images/slider/slider_4.jpg')"></div>
+                <div class="item" style="background-image:url('assets/images/slider/slider_5.jpg')"></div>
               </div>
               <a class="left carousel-control" href="#slider" data-slide="prev">
                 <span class="glyphicon glyphicon-chevron-left"></span>
@@ -97,8 +97,8 @@
                 <span class="sr-only">Next</span>
               </a>
             </div> <!-- carousel end -->
-            <div style="position:absolute; left:50%; top:40%; color:white">
-              <div id="intro_heading_box" style="position:relative; left:-50%;">
+            <div style="position:absolute; left:50%; top:40%; color:white;">
+              <div id="intro_heading_box" style="position:relative; left:-50%; background-color:rgba(0,0,0, 0.7); padding-left:20px; padding-right:20px; padding-top:10px; padding-bottom:20px; font-size:20px">
               <h2>SUVC - 2021</h2>
               <h1>SAUR URJA VEHICLE CHALLENGE</h1>
               <h2><i>ACCELERATING THE FUTURE</i></h2>
@@ -167,9 +167,9 @@
               </div>
             </div>
           </div><!-- /.row -->
-          <div class="row" style="padding-top:30px; padding-bottom: 30px; color:black;background-color:rgb(180,180,180); ">
+          <div class="row" style="padding-top:30px; padding-bottom: 30px; color:black; background-color:rgb(211,211,211);">
             <div class="col-sm-4">
-              <div>
+              <div class="style-box-1">
                 <h2 class="section-title multiple-title" align="center">VISION</h2><hr>
                 <p>To bring the focus of the future leaders towards Sustainable development,
                   Cutting edge Technology & Methods to utilize green and clean energy by acting
@@ -178,7 +178,7 @@
               </div>
             </div>
             <div class="col-sm-4">
-              <div>
+              <div class="style-box-1">
                 <h2 class="section-title multiple-title">MISSION</h2><hr>
                 <p>To develop students for industry-fit technocrats driven by providing conducive
                   environment for creative and innovative education through project-based learning,
@@ -187,7 +187,7 @@
               </div>
             </div>
             <div class="col-sm-4">
-              <div>
+              <div class="style-box-1">
                 <h2 class="section-title multiple-title">GOAL</h2><hr>
                 <p>
                   To apply student skills outside of the classroom by developing and design a electric
