--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,85 @@
     <meta charset="utf-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <style>
+    .pace {
+      -webkit-pointer-events: none;
+      pointer-events: none;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      user-select: none;
+    }
+
+    .pace-inactive {
+      display: none;
+    }
+
+    .pace .pace-progress {
+      background: #000000;
+      position: fixed;
+      z-index: 2000;
+      top: 0;
+      right: 100%;
+      width: 100%;
+      height: 2px;
+    }
+
+    .pace .pace-progress-inner {
+      display: block;
+      position: absolute;
+      right: 0px;
+      width: 100px;
+      height: 100%;
+      box-shadow: 0 0 10px #000000, 0 0 5px #000000;
+      opacity: 1.0;
+      -webkit-transform: rotate(3deg) translate(0px, -4px);
+      -moz-transform: rotate(3deg) translate(0px, -4px);
+      -ms-transform: rotate(3deg) translate(0px, -4px);
+      -o-transform: rotate(3deg) translate(0px, -4px);
+      transform: rotate(3deg) translate(0px, -4px);
+    }
+
+    .pace .pace-activity {
+      display: block;
+      position: fixed;
+      z-index: 2000;
+      top: 15px;
+      right: 15px;
+      width: 14px;
+      height: 14px;
+      border: solid 2px transparent;
+      border-top-color: #000000;
+      border-left-color: #000000;
+      border-radius: 10px;
+      -webkit-animation: pace-spinner 400ms linear infinite;
+      -moz-animation: pace-spinner 400ms linear infinite;
+      -ms-animation: pace-spinner 400ms linear infinite;
+      -o-animation: pace-spinner 400ms linear infinite;
+      animation: pace-spinner 400ms linear infinite;
+    }
+
+    @-webkit-keyframes pace-spinner {
+      0% { -webkit-transform: rotate(0deg); transform: rotate(0deg); }
+      100% { -webkit-transform: rotate(360deg); transform: rotate(360deg); }
+    }
+    @-moz-keyframes pace-spinner {
+      0% { -moz-transform: rotate(0deg); transform: rotate(0deg); }
+      100% { -moz-transform: rotate(360deg); transform: rotate(360deg); }
+    }
+    @-o-keyframes pace-spinner {
+      0% { -o-transform: rotate(0deg); transform: rotate(0deg); }
+      100% { -o-transform: rotate(360deg); transform: rotate(360deg); }
+    }
+    @-ms-keyframes pace-spinner {
+      0% { -ms-transform: rotate(0deg); transform: rotate(0deg); }
+      100% { -ms-transform: rotate(360deg); transform: rotate(360deg); }
+    }
+    @keyframes pace-spinner {
+      0% { transform: rotate(0deg); transform: rotate(0deg); }
+      100% { transform: rotate(360deg); transform: rotate(360deg); }
+    }
+
+    </style>
 
     <title>SUVC</title>
 
@@ -19,6 +98,7 @@
     <link rel="stylesheet" href="assets/third_party/css3_animateIt/css/animations.css">
     <link rel="stylesheet" href="assets/third_party/css3_animateIt/css/animations-ie-fix.css">
     <link rel="icon" href="assets/images/suvc.png" type="image/gif" sizes="16x16">
+
 </head>
 
 <body data-spy="scroll" data-target="#site-nav">
@@ -88,11 +168,11 @@
               </ol>
               <div class="carousel-inner">
                 <div class="item active" style="background-image:url('assets/images/slider/slider_0.png')"></div>
-                <div class="item" style="background-image:url('assets/images/slider/slider_1.jpg')"></div>
-                <div class="item" style="background-image:url('assets/images/slider/slider_2.jpg')"></div>
-                <div class="item" style="background-image:url('assets/images/slider/slider_3.jpg')"></div>
-                <div class="item" style="background-image:url('assets/images/slider/slider_4.jpg')"></div>
-                <div class="item" style="background-image:url('assets/images/slider/slider_5.jpg')"></div>
+                <div class="item"        style="background-image:url('assets/images/slider/slider_1.JPG')"></div>
+                <div class="item"        style="background-image:url('assets/images/slider/slider_2.JPG')"></div>
+                <div class="item" style="background-image:url('assets/images/slider/slider_3.JPG')"></div>
+                <div class="item" style="background-image:url('assets/images/slider/slider_4.JPG')"></div>
+                <div class="item" style="background-image:url('assets/images/slider/slider_5.JPG')"></div>
               </div>
               <a class="left carousel-control" href="#slider" data-slide="prev">
                 <span class="glyphicon glyphicon-chevron-left"></span>
@@ -471,25 +551,26 @@
             <div class="row">
               <div class="col-md-12">
                   <section class="customer-logos slider">
-                    <div class="slide"><img src="assets/images/clients/aps_eng_clg.png"></div>
+                    <div class="slide"><img src="assets/images/clients/aps_eng_clg.PNG"></div>
                     <div class="slide"><img src="assets/images/clients/apsit_mumbai.jpg"></div>
-                    <div class="slide"><img src="assets/images/clients/deogiri.png"></div>
-                    <div class="slide"><img src="assets/images/clients/dit.png"></div>
-                    <div class="slide"><img src="assets/images/clients/gsbt.png"></div>
+                    <div class="slide"><img src="assets/images/clients/deogiri.PNG"></div>
+                    <div class="slide"><img src="assets/images/clients/dit.PNG"></div>
+                    <div class="slide"><img src="assets/images/clients/gsbt.PNG"></div>
                     <div class="slide"><img src="assets/images/clients/hicet.jpg"></div>
-                    <div class="slide"><img src="assets/images/clients/hindusthan.png"></div>
-                    <div class="slide"><img src="assets/images/clients/jaglion.png"></div>
+                    <div class="slide"><img src="assets/images/clients/hindusthan.PNG"></div>
+                    <div class="slide"><img src="assets/images/clients/jaglion.PNG"></div>
                     <div class="slide"><img src="assets/images/clients/kramakrishna.png"></div>
-                    <div class="slide"><img src="assets/images/clients/krce.png"></div>
-                    <div class="slide"><img src="assets/images/clients/manit8.png"></div>
+                    <div class="slide"><img src="assets/images/clients/krce.PNG"></div>
+                    <div class="slide"><img src="assets/images/clients/manit8.PNG"></div>
                     <div class="slide"><img src="assets/images/clients/mitadt.png"></div>
-                    <div class="slide"><img src="assets/images/clients/nitrourkela.png"></div>
-                    <div class="slide"><img src="assets/images/clients/presidency.png"></div>
-                    <div class="slide"><img src="assets/images/clients/ramco.png"></div>
-                    <div class="slide"><img src="assets/images/clients/rjit.png"></div>
-                    <div class="slide"><img src="assets/images/clients/saranathan.png"></div>
-                    <div class="slide"><img src="assets/images/clients/sbjain.png"></div>
-                    <div class="slide"><img src="assets/images/clients/skce.png"></div>
+                    <div class="slide"><img src="assets/images/clients/mkce.PNG"></div>
+                    <div class="slide"><img src="assets/images/clients/nitrourkela.PNG"></div>
+                    <div class="slide"><img src="assets/images/clients/presidency.PNG"></div>
+                    <div class="slide"><img src="assets/images/clients/ramco.PNG"></div>
+                    <div class="slide"><img src="assets/images/clients/rjit.PNG"></div>
+                    <div class="slide"><img src="assets/images/clients/saranathan.PNG"></div>
+                    <div class="slide"><img src="assets/images/clients/sbjain.PNG"></div>
+                    <div class="slide"><img src="assets/images/clients/skce.PNG"></div>
                     <div class="slide"><img src="assets/images/clients/srisairam.png"></div>
                     <div class="slide"><img src="assets/images/clients/srmist.jpg"></div>
                   </section>
@@ -706,6 +787,7 @@
     </footer>
 
     <!-- script -->
+    <script src="assets/js/pace.js"></script>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="bower_components/smooth-scroll/dist/js/smooth-scroll.min.js"></script>
