--- a/public/index.html
+++ b/public/index.html
@@ -141,9 +141,9 @@
                     <!-- <li><a data-scroll href="#">Sponsorship</a></li> -->
                     <li><a data-scroll href="#faq">CONTACT US</a></li>
                     <!--<li><a data-scroll href="#location">REGISTER</a></li>-->
-                    <li><a href="https://sites.google.com/view/suvc2020/home" target="_blank">REGISTER</a></li>
+                    <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdRNgfyzP8dU9KZcG2UyAFbkl-8GJ3CwuIsMUByH1f4btgNvw/viewform" target="_blank">REGISTER</a></li>
                     <li>
-                        <a href="assets/content/rulebook_2020.pdf" target="_blank">Rule Book
+                        <a href="assets/content/rulebook_2021.pdf" target="_blank">Rule Book
                             <i class="ion-android-download"></i>
                         </a>
                     </li>
@@ -194,7 +194,7 @@
               <h3><i>ACCELERATING THE FUTURE</i></h3>
               <!--<p>VENUE &colon; HINDUSTHAN COLLEGE OF ENGINEERING AND TECHNOLOGY, Coimbatore, Tamil Nadu</p>-->
               <p>Season 4</p>
-              <a class="btn btn-white" href="https://sites.google.com/view/suvc2020/home" target="_blank">Register Now</a>
+              <a class="btn btn-white" href="https://docs.google.com/forms/d/e/1FAIpQLSdRNgfyzP8dU9KZcG2UyAFbkl-8GJ3CwuIsMUByH1f4btgNvw/viewform" target="_blank">Register Now</a>
               </div>
             </div>
         </div> <!-- row end -->
@@ -205,10 +205,10 @@
           <div class="row">
             <div class="col-sm-6">
                 <h1 class="section-title wow bounceInUp">About Us</h1>
-                <p class="wow bounceInLeft" style="font-weight:500; font-size: 1em;text-align:justify;">SUVC IS A SOLAR ELECTRIC CAR COMPETITION ORGANISED BY REFRANGIBLE SOCIETY (RSTE),
-                  THAT CHALLENGE ENGINEERING STUDENTS TO WORK ON ELECTRIC VEHICLES WITH UTILIZATION OF SUSTAINABLE ENERGY.
-                  SUVC KNOWN FOR ITS USP -  MENTORING TEAMS ENTIRE YEAR WITH TECHNICAL AND NON TECHNICAL SUPPORT BY THE COLLABORATION OF
-                   VARIOUS AUTOMOBILE AND RENEWABLE ENERGY RESEARCHERS.
+                <p class="wow bounceInLeft" style="font-weight:500; font-size: 1em;text-align:justify;">SUVC is a solar electric vehicle competition organised by REFRANGIBLE SOCIETY (RSTE),
+                  that challenge engineering students to work on electric vehicles with utilization of sustainable energy.
+                  SUVC known for its USP -  Mentoring teams entire year with technical and non technical support by the collaboration of
+                   various automobiles and renewable energy researchers.
                   </p>
             </div><!-- /.col-sm-6 -->
             <div class="col-sm-6  wow fadeInLeft">
@@ -229,7 +229,7 @@
               </p>
               <div class="mt20">
                   <button type="submit" class="btn btn-black"
-                      onclick="window.open('assets/content/rulebook_2020.pdf')"
+                      onclick="window.open('assets/content/rulebook_2021.pdf')"
                       id="registration-submit-btn">Download Rule Book <i class="ion-android-download"></i></button>
               </div>
             </div><!-- /.col-sm-6 -->
@@ -240,7 +240,7 @@
               </p>
               <div class="mt20">
                   <button type="submit" class="btn btn-black"
-                      onclick=""
+                      onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSdRNgfyzP8dU9KZcG2UyAFbkl-8GJ3CwuIsMUByH1f4btgNvw/viewform')"
                       id="">Register Now</button>
               </div>
             </div>
@@ -462,7 +462,7 @@
                 has conducted in coimbatore, TamilNadu with collaboration of hindustan charitable education trust.  </p>
                 <div class="mt20">
                     <button type="submit" class="btn btn-black"
-                        onclick="window.open('https://sites.google.com/view/suvc2020/home')"
+                        onclick=""
                         id="registration-submit-btn">More Detail</button>
                 </div>
             </div>
@@ -479,7 +479,7 @@
               </p>
               <div class="mt20">
                   <button type="submit" class="btn btn-black"
-                      onclick="window.open('https://sites.google.com/view/suvc2020/home')"
+                      onclick=""
                       id="registration-submit-btn">More Detail</button>
               </div>
             </div>
@@ -494,7 +494,7 @@
                 where students learn practical things from working professionals and hand hold support for the entire year. </p>
                 <div class="mt20">
                     <button type="submit" class="btn btn-black"
-                        onclick="window.open('https://sites.google.com/view/suvc2020/home')"
+                        onclick=""
                         id="registration-submit-btn">More Detail</button>
                 </div>
             </div>
@@ -711,7 +711,7 @@
 
                             <div class="mt20">
                                 <button type="submit" class="btn btn-black"
-                                    onclick="window.open('https://sites.google.com/view/suvc2020/home')"
+                                    onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSdRNgfyzP8dU9KZcG2UyAFbkl-8GJ3CwuIsMUByH1f4btgNvw/viewform')"
                                     id="registration-submit-btn">Register Now</button>
                             </div>
                             <!-- <a class="btn btn-white" href="https://sites.google.com/view/suvc2020/home"
