--- a/public/workshop.html
+++ b/public/workshop.html
@@ -125,7 +125,7 @@
 
                     <!-- navigation menu -->
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="">RSTE</a></li>
+                    <li><a href="rste.html">RSTE</a></li>
                     <li class="active"><a data-scroll href="workshop.html">WORKSHOP</a></li>
                     <li><a href="gallery.html">GALLERY</a></li>
                     <!-- <li><a data-scroll href="#">Sponsorship</a></li> -->
