added few changes based on design doc

--- a/public/rste.html
+++ b/public/rste.html
@@ -125,11 +125,13 @@
           <div class="row">
             <div class="col-sm-6">
                 <h1 class="section-title wow bounceInUp">About RSTE</h1>
-                <p class="wow bounceInLeft" style="font-weight:500; font-size: 1em;text-align:justify;"> Some text about RSTE goes here. Some text about RSTE goes here.
-                  Some text about RSTE goes here. Some text about RSTE goes here. Some text about RSTE goes here. Some text about RSTE goes here. Some text about RSTE goes here.
-                  Some text about RSTE goes here. Some text about RSTE goes here. Some text about RSTE goes here. Some text about RSTE goes here. Some text about RSTE goes here.
-                  Some text about RSTE goes here. Some text about RSTE goes here. Some text about RSTE goes here. Some text about RSTE goes here. Some text about RSTE goes here.
-                  </p>
+                <p class="wow bounceInLeft" style="font-weight:500; font-size: 1em;text-align:justify;">
+                The RSTE (Refrangible Society of Technophile Engineers) is a Non Government organisation (NGO) registered under Act 1973,Section 44
+                is the elite name for development of EVs, sustainable energy and creative education. Society is mentoring thousands of young engineering
+                students and entrepreneurs  with the association of scientists, researchers and various industry experts from all over the globe and providing
+                the best opportunity to meet the criteria of current demand of industry.  Solar electric car event (SUVC) ,Workshops, training, industries visit,
+                product development ,Internship and placement are the main key areas of society.
+                </p>
             </div><!-- /.col-sm-6 -->
             <div class="col-sm-6  wow fadeInLeft">
               <figure>
@@ -150,11 +152,9 @@
               2017
             </div>
             <div class="milestone-summary wow slideInLeft">
-              <h1> HEADING </h1>
-              <p> Some text about this milestone here. This is just a sample text.  Some text about this milestone here. This is just a sample text.
-                 Some text about this milestone here. This is just a sample text.  Some text about this milestone here. This is just a sample text.
-                Some text about this milestone here. This is just a sample text. Some text about this milestone here. This is just a sample text.
-                Some text about this milestone here. This is just a sample text.
+              <h1> FOUNDED RSTE SOCIETY </h1>
+              <p> Founded RSTE society on 26 August 2017 with registration and all the legalities.
+                Collaboration with Gwalior Vyapar Mela, SUVC event registration, Pre-virtual round hosted in gwalior, Madhya pradesh.
                </p>
             </div>
           </div>
