rste and workshop page update

--- a/public/rste.html
+++ b/public/rste.html
@@ -113,7 +113,7 @@
             <div style="position:absolute; left:50%; top:40%; color:white;" >
               <div id="intro_heading_box" class="wow zoomIn" style="position:relative; left:-50%; background-color:rgba(35,52,85, 0.59); padding-left:20px; padding-right:20px; padding-top:10px; padding-bottom:20px; font-size:20px">
               <h1 style="font-family:'raceFont';">RSTE</h1>
-              <h2 style="font-family:'stencilFont';"> full name here  </h2>
+              <h2 style="font-family:'stencilFont';"> Refrangible Society of Technophile Engineers </h2>
 
               </div>
             </div>
@@ -132,6 +132,11 @@
                 the best opportunity to meet the criteria of current demand of industry.  Solar electric car event (SUVC) ,Workshops, training, industries visit,
                 product development ,Internship and placement are the main key areas of society.
                 </p>
+                <div class="mt20">
+                    <button type="submit" class="btn btn-black wow fadeInLeft"
+                        onclick="window.open('assets/content/RSTE_TECHNICAL_CLUB_21.pdf')"
+                        id="registration-submit-btn">Open RSTE Club</button>
+                </div>
             </div><!-- /.col-sm-6 -->
             <div class="col-sm-6  wow fadeInLeft">
               <figure>
@@ -163,11 +168,10 @@
               2018
             </div>
             <div class="milestone-summary wow slideInRight">
-              <h1> HEADING </h1>
-              <p> Some text about this milestone here. This is just a sample text.  Some text about this milestone here. This is just a sample text.
-                 Some text about this milestone here. This is just a sample text.  Some text about this milestone here. This is just a sample text.
-                Some text about this milestone here. This is just a sample text. Some text about this milestone here. This is just a sample text.
-                Some text about this milestone here. This is just a sample text.
+              <h1> SUVC Season-1 </h1>
+              <p> SUVC Season-1 conducted at Gwalior Madhya pradesh, Training program conducted in Aurangabad and Mumbai.
+                Association with AMV solar, Solar India and Launch India as  corporate association. E- bicycle product
+                launch and work on solar research .
                </p>
             </div>
           </div>
@@ -176,11 +180,10 @@
               2019
             </div>
             <div class="milestone-summary wow slideInLeft">
-              <h1> HEADING </h1>
-              <p> Some text about this milestone here. This is just a sample text.  Some text about this milestone here. This is just a sample text.
-                 Some text about this milestone here. This is just a sample text.  Some text about this milestone here. This is just a sample text.
-                Some text about this milestone here. This is just a sample text. Some text about this milestone here. This is just a sample text.
-                Some text about this milestone here. This is just a sample text.
+              <h1> CONDUCTED SAP TRAINING PROGRAMME </h1>
+              <p> SAP training program conducted at Bangalore, Gwalior, Trichy, Coimbatore, aurangabad and chennai in various Institutes.
+                Collaboration with Launch India, illuvia Industries, Messer cutting as placement partners.
+                Conducted SUVC -2019 Season 2 in coimbatore, Tamilnadu with association of Hindusthan College of Engineering & Technology (HCET).
                </p>
             </div>
           </div>
@@ -189,136 +192,65 @@
               2020
             </div>
             <div class="milestone-summary wow slideInRight">
-              <h1> HEADING </h1>
-              <p> Some text about this milestone here. This is just a sample text.  Some text about this milestone here. This is just a sample text.
-                 Some text about this milestone here. This is just a sample text.  Some text about this milestone here. This is just a sample text.
-                Some text about this milestone here. This is just a sample text. Some text about this milestone here. This is just a sample text.
-                Some text about this milestone here. This is just a sample text.
+              <h1> CONDUCTED VIRTUAL SESSIONS </h1>
+              <p> Virtual round conducted at RJIT college and KRCE college as a north and South Zone.
+                Training program at Audi Training Centre and Central School of Motor Transport (C.S.M.T.),
+                BSF tekanpur for Suvc participants. BSF Jawaz bike show visit for participants in BSF Academy.
+                SUVC -2020 season 3 conducted in HCET, Coimbatore. Youtube live season from industry experts for all students.
+               </p>
+            </div>
+          </div>
+          <div class="milestone-item item-left">
+            <div class="milestone-year wow zoomInUp">
+              2021
+            </div>
+            <div class="milestone-summary wow slideInLeft">
+              <h1> SUVC SEASON 4 </h1>
+              <p> SUVC Season 4 registration started for all auto enthusiastic teams.
                </p>
             </div>
           </div>
 
 
-
         </div>
       </div>
     </section>
-    <section id="experts" class="section experts">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h1 class="section-title wow bounceInDown">Our Experts</h1>
-                </div>
-            </div>
 
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="speaker wow zoomIn">
-                        <figure>
-                            <img alt="" class="img-responsive center-block speaker-image"
-                                src="assets/images/speakers/1.jpg">
-                        </figure>
-                        <h4>Mrs. Saraswati K</h4>
-                        <p>Secretary, Hindusthan group</p>
+    <section>
+      <div style="text-align:center;"> <h2 class="section-title" style="display:inline-block; font-size:3.5em">OUR SEGMENTS</h2></div>
+      <div class="container">
+        <div class="row" style="margin-bottom:0px; padding-bottom:0px;">
+          <div class="col-sm-12" style="padding:10px; padding-bottom: 50px; background-color:rgba(250,195,3,0.9); color:black">
+            <center><h2>RSTE CLUB </h2></center>
+            <ul>
+              <li>RSTE Club is comprises with lots of industries expert, researcher, scientest, corporates, Govt. Officers from automobile, EVs , solar energy, automation and various sectors to guide students for a bright career and opportunities.</li>
+              <li>College and universities can open RSTE Technical club in their campus, for getting various services like; placement, internship, training & visits opportunities. Technical and management assistance by experts, fee relaxation in many event, certification and membership for boost up profile.</li>
+            </ul>
+          </div>
+        </div> <!-- END OF ROW 1 -->
 
+        <div class="row">
+          <div class="col-sm-6" style="padding:50px;background-color:rgba(250,195,3,0.7); color:black ">
+              <center><h2> PRODUCTS </h2></center>
+              <ul style="text-align:justify">
+                <li>EV conversion kit.</li>
+                <li>E- rikshaw kit.</li>
+                <li>E- cycle</li>
+                <li>Li- ion batteries</li>
+              </ul>
+          </div>
+          <div class="col-sm-6" style="padding:50px; margin-bottom: 50px; background-color:rgba(250,195,3,0.6); color:black">
+              <center><h2> SERVICES </h2></center>
+              <ul style="text-align:justify">
+                <li>SUVC - Solar car event</li>
+                <li>SAP - Training programs</li>
+                <li>Industrial visits</li>
+                <li>Solar panel installation</li>
+              </ul>
+          </div>
+        </div> <!-- end of second row -->
 
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="speaker wow slideInUp">
-
-                        <figure>
-                            <img alt="" class="img-responsive center-block speaker-image"
-                                src="assets/images/speakers/2.jpg">
-                        </figure>
-                        <h4>Dr. T. Kannadasan</h4>
-                        <p>Principal</p>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="speaker wow zoomIn">
-                        <figure>
-                            <img alt="" class="img-responsive center-block speaker-image"
-                                src="assets/images/speakers/3.jpg">
-                        </figure>
-
-                        <h4>Dr. K. Siva </h4>
-                        <p>HOD, Mechanical</p>
-                        <!-- <ul class="social-block">
-                            <li><a href=""><i class="ion-social-twitter"></i></a></li>
-                            <li><a href=""><i class="ion-social-facebook"></i></a></li>
-                            <li><a href=""><i class="ion-social-linkedin-outline"></i></a></li>
-                            <li><a href=""><i class="ion-social-googleplus"></i></a></li>
-                        </ul> -->
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-4">
-
-                    <div class="speaker wow slideInUp">
-
-                        <figure>
-                            <img alt="" class="img-responsive center-block speaker-image"
-                                src="assets/images/speakers/4.jpg">
-                        </figure>
-
-                        <h4>Mr. Santosh Pant</h4>
-
-                        <p>Deputy Manager, RNT BCI</p>
-
-                        <!-- <ul class="social-block">
-                            <li><a href=""><i class="ion-social-twitter"></i></a></li>
-                            <li><a href=""><i class="ion-social-facebook"></i></a></li>
-                            <li><a href=""><i class="ion-social-linkedin-outline"></i></a></li>
-                            <li><a href=""><i class="ion-social-googleplus"></i></a></li>
-                        </ul> -->
-                    </div>
-                </div>
-                <div class="col-md-4">
-
-                    <div class="speaker wow zoomIn">
-
-                        <figure>
-                            <img alt="" class="img-responsive center-block speaker-image"
-                                src="assets/images/speakers/5.jpg">
-                        </figure>
-
-                        <h4>S. Venkataraman</h4>
-
-                        <p>Sr. Vice President, Jayem Automotives</p>
-
-                        <!-- <ul class="social-block">
-                            <li><a href=""><i class="ion-social-twitter"></i></a></li>
-                            <li><a href=""><i class="ion-social-facebook"></i></a></li>
-                            <li><a href=""><i class="ion-social-linkedin-outline"></i></a></li>
-                            <li><a href=""><i class="ion-social-googleplus"></i></a></li>
-                        </ul> -->
-
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="speaker wow slideInUp">
-                        <figure>
-                            <img alt="" class="img-responsive center-block speaker-image"
-                                src="assets/images/speakers/6.jpg">
-                        </figure>
-                        <h4>Mr. Muralidharan Gopi Ramesh </h4>
-                        <p>Program Manager, RNT BCI </p>
-                        <!-- <ul class="social-block">
-                            <li><a href=""><i class="ion-social-twitter"></i></a></li>
-                            <li><a href=""><i class="ion-social-facebook"></i></a></li>
-                            <li><a href=""><i class="ion-social-linkedin-outline"></i></a></li>
-                            <li><a href=""><i class="ion-social-googleplus"></i></a></li>
-                        </ul> -->
-                    </div>
-                </div>
-            </div>
-        </div>
+      </div>
     </section>
 
 
